routingTable and tests redone